# nix-unsafePlugins

./: CMakeLists.txt  default.nix  test.sh  traceFd.cc  unsafePlugins.cc
.github/workflows/: test.yaml
examples/: nixpkgsPositions.nix
